--- a/frontend/src/scenes/cohorts/Cohorts.scss
+++ b/frontend/src/scenes/cohorts/Cohorts.scss
@@ -14,6 +14,6 @@
     border-radius: var(--radius);
 
     &:hover {
-        border-color: var(--primary-3000-hover);
+        border-color: var(--color-primary);
     }
 }
