--- a/frontend/src/lib/lemon-ui/LemonModal/LemonModal.scss
+++ b/frontend/src/lib/lemon-ui/LemonModal/LemonModal.scss
@@ -41,7 +41,7 @@
     // Always give toasts some space at the bottom
     max-height: calc(100vh - 60px - 2rem);
     margin: 1rem auto;
-    background-color: var(--color-card);
+    background-color: var(--color-muted);
     border: 1px solid var(--color-border-strong);
     border-radius: var(--radius);
     box-shadow: var(--modal-shadow-elevation);
