--- a/frontend/src/lib/components/HTMLElementsDisplay/SelectableElement.scss
+++ b/frontend/src/lib/components/HTMLElementsDisplay/SelectableElement.scss
@@ -7,30 +7,15 @@
         border 200ms ease;
 
     &.SelectableElement--selected {
-        color: var(--color-foreground);
         text-decoration: underline;
         background: var(--color-primary);
-
-        [theme='dark'] & {
-            color: var(--color-text-foreground-inverse);
-        }
     }
 
     &:hover {
-        color: var(--color-foreground);
-        background: var(--color-accent-hover);
-
-        [theme='dark'] & {
-            color: var(--color-text-foreground-inverse);
-        }
+        background: var(--color-primary);
     }
 
     &:active {
-        color: var(--color-foreground);
-        background: var(--color-accent-active);
-
-        [theme='dark'] & {
-            color: var(--color-text-foreground-inverse);
-        }
+        background: var(--color-primary);
     }
 }
