--- a/frontend/src/layout/navigation-3000/Navigation.scss
+++ b/frontend/src/layout/navigation-3000/Navigation.scss
@@ -579,7 +579,7 @@
     }
 
     &.SidebarListItem--marker-status-completion {
-        --sidebar-list-item-status-color: var(--purple);
+        --sidebar-list-item-status-color: var(--color-fuchsia-700);
     }
 }
 
