--- a/frontend/src/lib/components/Cards/CardMeta.scss
+++ b/frontend/src/lib/components/Cards/CardMeta.scss
@@ -129,7 +129,7 @@
     }
 
     &.purple {
-        background: var(--purple);
+        background: var(--color-fuchsia-700);
     }
 
     &.green {
