--- a/frontend/src/lib/lemon-ui/LemonTag/LemonTag.scss
+++ b/frontend/src/lib/lemon-ui/LemonTag/LemonTag.scss
@@ -70,6 +70,11 @@
         color: color-mix(in oklab, var(--color-destructive-foreground) 60%, transparent);
         background: none;
         border-color: color-mix(in oklab, var(--color-destructive-foreground) 60%, transparent);
+
+        [theme='dark'] & {
+            color: color-mix(in oklab, var(--color-destructive-foreground) 30%, white);
+            border-color: color-mix(in oklab, var(--color-destructive-foreground) 30%, white);
+        }
     }
 
     &.LemonTag--muted {
