added export history with download link

--- a/posthog/templates/admin/posthog/team/export_individual_replay.html
+++ b/posthog/templates/admin/posthog/team/export_individual_replay.html
@@ -5,4 +5,5 @@
     <p><strong>With great power comes great responsibility</strong></p>
 
     <a class="button" href="{{ export_url }}" style="margin-right: 10px;">Export session replay</a>
+    <a class="button" href="{{ export_history_url }}">View past exports</a>
 </div>
