fix: input-like class by adding background

--- a/frontend/src/styles/base.scss
+++ b/frontend/src/styles/base.scss
@@ -1096,6 +1096,7 @@
     }
 
     .input-like {
+        background-color: var(--color-bg-surface-primary);
         border-radius: var(--radius);
         outline: 0 solid transparent;
         box-shadow: 0 0 0 0 transparent;
