--- a/frontend/src/lib/components/Errors/Frame/CollapsibleFrameHeader.scss
+++ b/frontend/src/lib/components/Errors/Frame/CollapsibleFrameHeader.scss
@@ -3,12 +3,21 @@
     display: flex;
     align-items: center;
     width: 100%;
+    overflow: hidden;
 
     .frame-function {
         display: flex;
         flex: 0 0 auto;
         align-items: center;
+        max-width: 60%;
         height: 100%;
+        overflow: auto hidden;
+        white-space: nowrap;
+        scrollbar-width: none;
+
+        &[scrollable] {
+            mask-image: linear-gradient(to right, transparent, black 1em);
+        }
     }
 
     .frame-source {
