fix: move notices into scene so they don't mess with vertical space so much

--- a/frontend/src/scenes/session-recordings/playlist/Playlist.scss
+++ b/frontend/src/scenes/session-recordings/playlist/Playlist.scss
@@ -22,6 +22,10 @@
     // NOTE: Replay scene height is very tightly controlled to make sure controls are always on-screen
     height: calc(100vh - 7rem);
     min-height: 25rem;
+
+    &--with-project-notice {
+        height: calc(100vh - 9rem);
+    }
 }
 
 .SessionRecordingPreview {
